Feat: Add API endpoint for blog post submission
This commit introduces a new API endpoint for creating blog posts,
updates API authentication, and modifies API security settings.

Changes include:
- A new POST endpoint `/blog-posts/submit` for creating blog posts,
  along with `BlogPostIn` and `BlogPostOut` schemas.
- The `BlogPost` model now includes a `status` field (e.g., DRAFT,
  PUBLISHED) with corresponding `BlogPostStatus` choices.
- API authentication for `Profile` lookup now uses the `key` field
  instead of `api_key`.
- CSRF protection has been disabled for the Ninja API (`csrf=False`).
- A `LOGFIRE_CONSOLE_SHOW_PROJECT_LINK=False` option was added to
  `.env.example` for Logfire configuration.

The primary goal is to enable programmatic creation of blog content.
The `Profile.key` rename aligns field naming. Disabling CSRF is a
common pattern for stateless, token-authenticated APIs.

Important Notes:
- The `/blog-posts/submit` endpoint currently does not handle file
  uploads for `icon` and `image` fields; these are ignored.
- **Breaking Change:** API clients authenticating via profile tokens
  must ensure their `Profile` model's token field is named `key`,
  not `api_key`, for successful authentication.
- **Security Note:** CSRF protection has been disabled for all API
  endpoints. This may have security implications if browser-based
  clients make non-GET requests to the API without other CSRF
  mitigation strategies.

--- a/{{ cookiecutter.project_slug }}/.env.example
+++ b/{{ cookiecutter.project_slug }}/.env.example
@@ -54,4 +54,5 @@ OPENAI_API_KEY=
 
 {% if cookiecutter.use_logfire == 'y' -%}
 LOGFIRE_TOKEN=
+LOGFIRE_CONSOLE_SHOW_PROJECT_LINK=False
 {%- endif %}
